--- a/3 - search a element in a binary tree/index.html
+++ b/3 - search a element in a binary tree/index.html
@@ -11,11 +11,14 @@
 
 <body>
 	<h1>Percusos na Árvore Binária</h1>
-	<script type="text/javascript" src="TraversalTree.js"></script>
+	<script type="text/javascript" src="Tree.js"></script>
 
 	<div class="form">
 		<input type="text" name="enter" class="enter" value="" id="value">
 		<input class = "button" type="button" value="Inserir" OnClick="insert()">
+		<br>
+		<br><input type="text" name="enter" class="enter" value="" id="busca">
+		<input class = "button" type="button" value="Buscar" OnClick="busca()">
 		<br>
 		<br>
 		<button type="button" onclick="printEmOrdem()">Em Ordem</button>
